# type_proofs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  demo_bad_usage.cpp  flake.nix  invert_ret.sh  logic.hpp  main.cpp  tag_test.cpp  test_prop.cpp
logic/: algo.hpp  empty_types.hpp  int.hpp  logic.hpp  tagging.hpp
logic/tagged/: bool.hpp  int.hpp
subst_test/: negative_control.cpp  positive.cpp  test_types.hpp
subst_test/negative/: bound_subst1.cpp  bound_subst2.cpp
